syntax = "proto3";
package ET;

message HttpGetRouterResponse
{
  repeated string Realms = 1;
  repeated string Routers = 2;
}

message RouterSync
{
  uint32 ConnectId = 1;
  string Address = 2;
}

// 进入地图
//ResponseType G2C_EnterMap
message C2G_EnterMap // ISessionRequest
{
}
message G2C_EnterMap // ISessionResponse
{
  // 自己unitId
  int64 MyId = 4;
}

//ResponseType G2C_EnterGameMap
message C2G_EnterGameMap // ISessionRequest
{
	int64 RoleId = 2;
}

message G2C_EnterGameMap // ISessionResponse
{
	// 自己unitId
	int64 MyId = 4;
}

// 进入地图成功
//ResponseType M2C_EnterMapOk
message C2M_EnterMapOk // ILocationRequest
{
}
message M2C_EnterMapOk // ILocationResponse
{
}

message MoveInfo
{
  repeated Unity.Mathematics.float3 Points = 1;
  Unity.Mathematics.quaternion Rotation = 2;
  int32 TurnSpeed = 3;
}

message UnitInfo
{
  int64 UnitId = 1;
  int32 ConfigId = 2;
  int32 Type = 3;
  Unity.Mathematics.float3 Position = 4;
  Unity.Mathematics.float3 Forward = 5;
  map<int32, int64> KV = 6;
  MoveInfo MoveInfo = 7;
}

// 创建对象列表
message M2C_CreateUnits // IMessage
{
  repeated UnitInfo Units = 1;
}

// 删除对象列表
message M2C_RemoveUnits // IMessage
{
  repeated int64 Units = 1;
}

// 创建主玩家
message M2C_CreateMyUnit // IMessage
{
  UnitInfo Unit = 1;
}

// 开始切换场景
message M2C_StartSceneChange // IMessage
{
  int64 SceneInstanceId = 1;
  string SceneName = 2;
}

// 寻路请求
message C2M_PathfindingResult // ILocationMessage
{
  Unity.Mathematics.float3 Position = 2;
}

// 停止移动
message C2M_Stop // ILocationMessage
{
}

// 寻路广播
message M2C_PathfindingResult // IMessage
{
  int64 Id = 1;
  Unity.Mathematics.float3 Position = 2;
  repeated Unity.Mathematics.float3 Points = 3;
}

// 停止移动
message M2C_Stop // IMessage
{
  int32 Error = 1;
  int64 Id = 2;
  Unity.Mathematics.float3 Position = 3;
  Unity.Mathematics.quaternion Rotation = 4;
}

//ResponseType G2C_Ping
message C2G_Ping // ISessionRequest
{
}

message G2C_Ping // ISessionResponse
{
  int64 Time = 4;
}

//ResponseType R2C_Login
message C2R_Login // ISessionRequest
{
  string  Account = 2;  // 帐号
  string  Password = 3;  // 密码
}

message R2C_Login // ISessionResponse
{
  string Address = 4;
  int64 Key = 5;
  int64 GateId = 6;
}

//ResponseType G2C_LoginGate
message C2G_LoginGate // ISessionRequest
{
  int64 Id = 1;
  int64 Key = 2;
  int64 GateId = 3;
}

message G2C_LoginGate // ISessionResponse
{
  int64 PlayerId = 4;
}

//ResponseType G2C_LoginGameGate
message C2G_LoginGameGate // ISessionRequest
{
  int64 Id = 1;
  int64 Key = 2;
  int64 GateId = 3;
  int64 RoleId = 4;
}

message G2C_LoginGameGate // ISessionResponse
{
  int64 PlayerId = 4;
}

message AccountProto
{
  int64 Id = 0;
  int32 AccountType = 2;
  int64 CreateTime = 3;
}

message HttpAccount
{
  int32 Error = 91;
  AccountProto Account = 1;
}

message ServerInfoProto
{
	int64 Id = 1;
	int32 Status = 2;
	string ServerName = 3;
}

message HttpServerList
{
  repeated ServerInfoProto ServerList = 1;
}

message RoleInfoProto
{
	int64 Id = 1;
	string Name = 2;
	int32 State = 3;
	string Account = 4;
	int64 LastLoginTime = 5;
	int64 CreateTime = 6;
	int32 ServerId = 7;
}

message HttpRoleList
{
  repeated RoleInfoProto RoleList = 1;
}

message HttpCreateRole
{
	int32 Error = 91;
	RoleInfoProto RoleInfo = 1;
}

message HttpDeleteRole
{
	int32 Error = 91;
	int64  DeletedRoleInfoId = 1;
}

message HttpRobot
{
	int32 Error = 91;
}

//创建角色
//ResponseType A2C_CreateRole
message C2A_CreateRole // IAccountRequest
{
	string Token    = 1;
	string Account  = 2;
	string Name     = 3;
	int32 ServerId  = 4;
}

message A2C_CreateRole // IAccountResponse
{
	RoleInfoProto RoleInfo = 1;
}

//获取角色列表
//ResponseType A2C_GetRoles
message C2A_GetRoles // IAccountRequest
{
	string Token     = 1;
	string Account   = 2;
	int32  ServerId  = 3;
}

message A2C_GetRoles // IAccountResponse
{
	repeated RoleInfoProto RoleInfo = 1;
}

//删除角色
//ResponseType A2C_DeleteRole
message C2A_DeleteRole // IAccountRequest
{
	string Token      = 1;
	string Account  = 2;
	int64  RoleInfoId = 3;
	int32  ServerId   = 4;
}
message A2C_DeleteRole // IAccountResponse
{
	int64  DeletedRoleInfoId = 1;
}

//ResponseType M2C_TransferMap
message C2M_TransferMap // ILocationRequest
{
}

message M2C_TransferMap // ILocationResponse
{
}

//ResponseType G2C_Benchmark
message C2G_Benchmark // ISessionRequest
{
}

message G2C_Benchmark // ISessionResponse
{
}

//更新护盾值
message M2C_UpdateUnitShield // IMessage
{
  int64 Id = 1;
  map<int32, int64> KV = 2;
}

//任务
message TaskProto
{
  int32 Id = 1;
  repeated int64 Args = 2;
  int64 Min = 3;
  int64 Max = 4;
  int32 Status = 5;
  int64 Time = 6;
  int64 AcceptTime = 7;
}

// 更新任务
message M2C_UpdateTask //IMessage
{
  repeated TaskProto List = 1;
}

// 删除任务
message M2C_DeleteTask //IMessage
{
  repeated int32 List = 1;
}

// 提交任务
//ResponseType M2C_CommitTask
message C2M_CommitTask //ILocationRequest
{
  int32 Id = 1;
}

message M2C_CommitTask //ILocationResponse
{
}

//道具
message ItemProto
{
  int64 Id = 0;
  int32 CfgId = 1;
  int64 Count = 2;
  int64 ValidTime = 3;
}

// 更新道具
message M2C_UpdateItem //IMessage
{
  repeated ItemProto List = 1;
}

// 使用道具
//ResponseType M2C_UseItem
message C2M_UseItem //ILocationRequest
{
  int32 Id = 1;
  int64 Count = 2;
  repeated string Args = 3;
}
message M2C_UseItem //ILocationResponse
{
  repeated string RetArgs = 3;
}

// 删除道具
//ResponseType M2C_DeleteItem
message C2M_DeleteItem //ILocationRequest
{
  repeated ItemProto List = 1;
}
message M2C_DeleteItem //ILocationResponse
{
}

// 请求玩家数据
//ResponseType M2C_GetPlayerData
message C2M_GetPlayerData //ILocationRequest
{
}

message M2C_GetPlayerData //ILocationResponse
{
  repeated ItemProto ItemList = 1;
  repeated TaskProto TaskList = 2;
  map<int32, int64> FinishDict = 3;
}

message RankRoleInfoProto
{
	string Name = 1;
	string HeadIcon = 2;
	int32 Level = 3;
	int64 Fight = 4;
	int32 Sex = 5;
}

//排行榜显示信息
message RankInfoProto
{
	int64 UnitId = 1;
	//分数
	int64 Score = 2;
	//排名
	int64 Rank = 3;
	//时间
	int64 Time = 4;
	//角色信息
	RankRoleInfoProto RoleInfo = 5;
}

//获取排行榜数据
//ResponseType Ran2C_GetRankResponse
message C2Rank_GetRankRequest // IRankRequest
{
	int64 UnitId = 1;
	int32 Type = 2;
	int32 SubType = 3;
	int32 Page = 4;
}

message Ran2C_GetRankResponse // IRankResponse
{
	repeated RankInfoProto List = 1;
	//自己的数据
	RankInfoProto SelfInfo = 2;
	int32 Page = 3;
}

message HeadProto
{
  string HeadIcon = 1;
  //头像框ID
  int32 ChatFrame = 2;
  //气泡Id
  int32 ChatBubble = 3;
}

message PlayerInfoProto
{
	int64 Id = 1;
  string Name = 2;
	HeadProto HeadIcon = 3;
	int32 Level = 4;
	int64 Fight = 5;
	int32 Sex = 6;
}

message ChatMsgProto
{
  int64 Id = 1;
  int64 Time = 2;
  int32 Channel = 3;
  //发送方信息
  PlayerInfoProto RoleInfo = 4;
  string Message = 5;
  //讨论组id
  string GroupId = 6;
}

//发送聊天消息
//ResponseType C2C_SendResponse
message C2Chat_SendRequest // IChatRequest
{
	int32 Channel = 1;
	PlayerInfoProto RoleInfo = 2;
	string Message = 3;
	string GroupId = 4;
}
message C2C_SendResponse // IChatResponse
{
}

//收到聊天信息
message C2C_UpdateChat // IChatMessage
{
	repeated ChatMsgProto List = 1;
}

message ChatGroupMemberProto
{
  int64 RoleId = 1;
  HeadProto HeadIcon = 2;
  //消息免打扰
  bool NoDisturbing = 3;
  int64 Sort = 4;
}

message ChatGroupProto
{
  string GroupId = 1;
  int64 LeaderId = 2;
  string Name = 3;
  repeated ChatGroupMemberProto MemberList = 4;
}

// 更新群组列表(上线和新进群聊时)
message C2C_GroupUpdate // IChatMessage
{
  repeated ChatGroupProto List = 1;
}

// 删除群聊
message C2C_GroupDel // IChatMessage
{
  string GroupId = 1;
}

message ActivityCfgProto
{
  int32 Id = 1;
  int32 ActivityType = 2;
  int32 Name = 3;
  int32 Desc = 4;
  string Icon = 5;
  int32 HelpId = 6;
  int32 WindowId = 7;
  repeated string Args = 8;
  string ShowItemList = 9;
  repeated string Ext = 10;
  repeated string DataList = 11;
}

message ActivityProto
{
  int32 Id = 1;
  int32 Level = 2;
  int64 OpenTime = 3;
  int64 HideTime = 4;
  int64 RealCloseTime = 5;
  ActivityCfgProto Cfg = 6;
}

//更新活动显示
message M2C_UpdateActivityList //IMessage
{
  repeated ActivityProto List = 1;
}

//活动关闭
message M2C_UpdateActivityClose //IMessage
{
  int32 Id = 1;
}

//活动显示
message M2C_UpdateActivity //IMessage
{
  ActivityProto Activity = 1;
}

//释放技能
//ResponseType M2C_UseSkillResponse
message C2M_UseSkillRequest //ILocationRequest
{
  int32 Id = 1;
  //自己的坐标
  Unity.Mathematics.float3 Position = 2;
  repeated Unity.Mathematics.float3 DstPosition = 3;
  repeated int64 DstList = 4;
  int32 Direct = 5;
}
message M2C_UseSkillResponse //ILocationResponse
{
}

message M2C_UseSkill //IMessage
{
  int32 Id = 1;
  int64 RoleId = 2;
  repeated int64 DstList = 3;
  repeated Unity.Mathematics.float3 DstPosition = 4;
  int32 Direct = 5;
  Unity.Mathematics.float3 Position = 6;
}

message M2C_UpdateSkill //IMessage
{
  int32 Id = 1;
  repeated int64 CdList = 2;
}

//打断技能
message C2M_BreakSkill //ILocationMessage
{
}

message M2C_BreakSkill //IMessage
{
  int32 Id = 1;
  int64 RoleId = 2;
}

//受伤信息
message HurtInfo
{
  //受伤者id
  int64 Id = 1;
  //伤害值
  int64 Hurt = 2;
  //吸血值
  int64 SuckHp = 3;
  //是否暴击
  bool IsCrit = 5;
  //是否直击
  bool IsDirect = 6;
  //是否格挡
  bool IsFender = 7;
  //是否是加血
  bool IsAddHp = 8;
  //是否免疫
  bool IsImmUnity = 9;
}

message M2C_HurtList //IMessage
{
  int64 RoleId = 1;
  int32 Id = 2;
  repeated HurtInfo HurtList = 3;
  string ViewCmd = 4;
}